--- a/HTMLPage1 - Copy.html
+++ b/HTMLPage1 - Copy.html
@@ -56,14 +56,70 @@
     <script>
         // Array of product image filenames with correct paths
         const productImages = [
-            "Images/10x10-Matrix-No-Box.png", "Images/2022SCBeenieWhite.png", "Images/SC22conbadge.jpg", "Images/SC23kidspack.jpg", "Images/SC23conbadge.jpg", "Images/ci-arbiterbypass.jpeg", "Images/CI-ConvertableCrossPick.png", "Images/ci-covertcompanion.jpeg", "Images/CI-TubularPracticeLock.png", "Images/ci-decoders.jpeg", "Images/CI-EasyLoaderReverseGrip.png", "Images/CI-EchelonPickSet.png", "Images/CI-EntrySpecialistBundle.png", "Images/CI-ErgoCombs.png", "Images/ci-fng.jpeg", "Images/CI-LrnLPBun.jpeg", "Images/CI-LichiAM5.jpeg", "Images/CI-LichiKW1.jpeg", "Images/ci-lishi-kw5.jpeg", "Images/CI-LichiSC1.jpeg", "Images/ci-lishi-sc20.jpeg", "Images/CI-LichiSC4.jpeg", "Images/ci-lockbumpkit.jpeg", "Images/CI-LockboxHingeTool.png", "Images/CI-NightOpsPatch.png", "Images/CI-PVCPinningPatch.png", "Images/CI-PadShims.jpeg", "Images/CI-PracticeLock.png", "Images/ci-quadcomb.jpeg", "Images/CI-Replicant.png", "Images/CI-SSFDIMPLERAKE.png", "Images/CI-SSFPadlockBypassDriver.png", "Images/CI-SlimPickings.png", "Images/CI-TSAKeySet.png", "Images/CI-TubularPracticeLock.png", "Images/CI-WardedPickSet.png", "Images/DesolderWickSolderSuck.jpeg", "Images/SnipsBlue.jpeg", "Images/ice-chameleonultra.jpeg", "Images/ice-proxmark3.jpeg", "Images/JL-015Flathooks.png", "Images/JL-015RoundHooks.png", "Images/JL-022basicset.png", "Images/JL-inter018v4.png", "Images/JL-022starter.png", "Images/jl-role.png","Images/SAINTCON23LogoPatch.jpeg", "Images/TactBagSmall.jpg", "Images/PrecisionLockTweezers.jpeg", "Images/SAINTCON23BLtee.jpg", "Images/SC24_AppSec_Patch.png", "Images/SC23BadgeLifePatch.jpeg", "Images/SC24_HC_Patch.png", "Images/SC24_Keep_Patch.png", "Images/2022PatchLockPick.jpeg", "Images/2022PatchScavHunt.jpeg", "Images/tinfoilhat.jpeg", "Images/tinfoilhat.jpeg", "Images/SC23Hoodie.jpeg", "Images/SC23BadgeLifePatch.jpeg", "Images/SC23Hoodie.jpeg", "Images/2022SCshotglass.jpeg", "Images/SolderMat30x20cm.jpeg", "Images/SolderFluxPen.jpeg", "Images/DesolderWickSolderSuck.jpeg"
+            "Images/10x10-Matrix-No-Box.png",
+            "Images/SC22conbadge.jpg",
+            "Images/SC23kidspack.jpg",
+            "Images/SC23conbadge.jpg",
+            "Images/ci-arbiterbypass.jpeg",
+            "Images/CI-ConvertableCrossPick.png",
+            "Images/ci-covertcompanion.jpeg",
+            "Images/CI-TubularPracticeLock.png",
+            "Images/ci-decoders.jpeg",
+            "Images/CI-EasyLoaderReverseGrip.png",
+            "Images/CI-EchelonPickSet.png",
+            "Images/CI-EntrySpecialistBundle.png",
+            "Images/CI-ErgoCombs.png",
+            "Images/ci-fng.jpeg",
+            "Images/CI-LrnLPBun.jpeg",
+            "Images/CI-LichiAM5.jpeg",
+            "Images/CI-LichiKW1.jpeg",
+            "Images/ci-lishi-kw5.jpeg",
+            "Images/CI-LichiSC1.jpeg",
+            "Images/ci-lishi-sc20.jpeg",
+            "Images/CI-LichiSC4.jpeg",
+            "Images/ci-lockbumpkit.jpeg",
+            "Images/CI-LockboxHingeTool.png",
+            "Images/CI-NightOpsPatch.png",
+            "Images/CI-PVCPinningPatch.png",
+            "Images/CI-PadShims.jpeg",
+            "Images/CI-PracticeLock.png",
+            "Images/ci-quadcomb.jpeg",
+            "Images/CI-Replicant.png",
+            "Images/CI-SSFDIMPLERAKE.png",
+            "Images/CI-SSFPadlockBypassDriver.png",
+            "Images/CI-SlimPickings.png",
+            "Images/CI-TSAKeySet.png",
+            "Images/CI-TubularPracticeLock.png",
+            "Images/CI-WardedPickSet.png",
+            "Images/ice-chameleonultra.jpeg",
+            "Images/ice-proxmark3.jpeg",
+            "Images/JL-015Flathooks.png",
+            "Images/JL-015RoundHooks.png",
+            "Images/JL-022basicset.png",
+            "Images/JL-inter018v4.png",
+            "Images/JL-022starter.png",
+            "Images/jl-role.png",
+            "Images/SAINTCON23LogoPatch.jpeg",
+            "Images/TactBagSmall.jpg",
+            "Images/SAINTCON23BLtee.jpg",
+            "Images/SC24_AppSec_Patch.png",
+            "Images/SC23BadgeLifePatch.jpeg",
+            "Images/SC24_HC_Patch.png",
+            "Images/SC24_Keep_Patch.png",
+            "Images/2022PatchLockPick.jpeg",
+            "Images/2022PatchScavHunt.jpeg",
+            "Images/SC23Hoodie.jpeg",
+            "Images/SC23BadgeLifePatch.jpeg",
+            "Images/SC23Hoodie.jpeg",
+            "Images/2022SCshotglass.jpeg",
+            "Images/SolderMat30x20cm.jpeg",
 
         ];
+
 
         // Array of product descriptions
         const productDescriptions = [
             "10 x 10 Mini-Badge Display Board",
-            "2022 SAINTCON Beenie One Size fits most.",
             "2022 SAINTCON Conference Badge",
             " ",
             "2023 SAINTCON Conference Badge",
@@ -99,8 +155,6 @@
             "This is a cost effective practice lock for you to develop your skill at tubular picking.You can practice using your tubular lock impressioning tool, or you can manually tension and single pin pick the lock. Tubular locks are commonly found in a wide variety of places like elevators, coin operated laundry machines, safes, and key boxes.",
             "Long handled version of the most popular warded pick designs that can fit in your pick case.",
             " ",
-            "Get the solder off and replace them with newer ones, which it is very common when soldering, so this desoldering removal tool will be your perfect companion to suck the solder away effectively. Clean the Solder in Detail: 2.5mm wide, 1.5m in length and 0.4oz in weight, the solder wick can clean the solder in some small or hard to reach areas.No clean flux, oxygen free copper wire.It will be a great accessory to remove the extra solder. How to Use the Solder Wick Step 1: Place the wick over the solder you need remove and then just push the heated soldering iron tip onto the wick; Step 2: Remove the wick once the solder has been absorbed; Step 3: Cut off the used part of the wick; Step 4: Repeat this process if needed",
-            "Flush Cut Wire Snips with Blue Handle",
             "The Chameleon Ultra is the ultimate RFID emulation device : Low and high - frequency emulation, full read & write capabilities, bleeding - edge cracking, wireless control : all wrapped up in a key - chain sized, fully open - sourced device. The Chameleon Ultra is the result of exceptional engineering ingenuity : the development team discovered that little - known RFID function in a popular Bluetooth controller could be pushed to provide high - performance, multi - frequency RFID reading, writing and cracking - and emulation performance almost identical to that of a physical card. This discovery gave birth to the Chameleon Ultra: a tiny, high performance RFID companion device for multi - frequency RFID emulation, cracking, reading and writing.",
             "<p>The Proxmark3 Dev Kit 4 (RDV4) from RRG/ProxGrind is more compact/portable and brings various improvements to the open source design. Antennas are highly customizable and there is a new multifunction multiplexing interface to support additional components such as external battery, external active high powered antenna, bluetooth interfaces and more. The new model replaces RDV3 (aka PM3 Easy), RDV2, and the original PM3 design.</p><p>2019-07 / 4.01 update notes: Multiple device improvements over the 4.0 version:</p><ul><li>Gold-plated FPC Connector</li><li>Antenna “Q-Switch” allowing for adapting antennas to specific operations</li><li>Antenna Frequency Switch allowing for optimised 125KHz and 134KHz performance</li><li>Reduced power supply noise</li></ul><p><br></p>",
             "<p>V4 picks in 0.015”. I’ve used every technique I know to make these profiles as strong as possible, but these are THIN tools and are not recommended while just starting out.</p><p>Includes:</p><ul><li>Low Profile Flat Hook</li><li>Short Flat Hook</li><li>Medium Flat Hook</li><li>Deep Flat Hook</li></ul><p><br></p>",
@@ -111,7 +165,6 @@
             "<p>Modeled after an armorer&#39;s tool roll, then modified better to suit lockpicks and tension tools.</p><p><strong>** Tools not included.</strong></p><ul><li>Durable, water-resistant 600 denier polyester</li><li>Hook and loop fastener to secure the roll in the closed position</li><li>Includes (12) protective pockets</li><li>Includes (1) zippered pocket.</li></ul><p><br></p>",
             " ",
             " ** Perfect for containing all your collected mini - badges. ** PREMIUM NYLON AND SIZE:: The size of Small Utility Pouch only 5.5”* 5 * 2.5 inches.This Molle Elastic Pouch Was made of high - quality 1000D nylon material, it is strong, durable, wear - resistant and tear - resistant FRONT LASER - CUT LOOP: Tactical molle pouch have 9 pcs laser cut hole.Molle platform for storing additional tools, mounting memorable patches, adding customization / tactical ID, attaching additional MOLLE gear.Adding our free flag patch will makes it more conspicuous and fashionable ALWAYS QUICK ACCESS WITH FAST OPEN: This small Waist Bag closed by double zipper Puller.It have elastic Hole at the top and suitable for get things for fast using MOLLE SYSTEM: Stick - on design on the back for attaching vests, bags and other gearWIDE RANGE OF APPLICATION:Perfect to storing handheld GPS, compass, extra pistol magazine, and other EDC tactical gear gadget multi - tools.Great for long term travel, outdoor recreation, hiking, hiking, adventure, fishing, cycling, huntingSHOP WITH CONFIDENCE: To provide you with the highest quality service, If you have any question, please feel free to contact us.We will provide after - sales service until you are satisfied",
-            "<ul><li>✔VERSATILE TOOL: Tweezers with lock, suitable for maintenance of electrical components, jewelry craftsmanship, jewelers tools, cleaning room and other tasks.</li><li>✔COMFORTABLE GRIP: The ergonomic design of the tweezers features an anti-slip and lock design, providing an easy and comfortable grip, which reduces hand fatigue and increases efficiency.</li></ul><p><br></p>",
             "Any Shirts older than 2022.",
             "SAINTCON AppSec Co Patch",
             "Velcro backed patch BadgeLife with embroidered edge, 4\"x3\" rounded top.",
@@ -119,28 +172,22 @@
             "SAINTCON Keep Patch",
             "SAINTCON LockPick Co Patch",
             "SAINTCON Scavenger Hunt Challenge Patch",
-            "SAINTCON legacy branded ball cap with words TIN FOIL on front and the SAINTCON legacy logo on the back. Sizes S / M, M / L, L / XL",
-            "2023 SAINTCON branded ball cap Sizes S / M, M / L, L / XL",
             "Black District Hoodie DT1103 with SAINTCON23 logo on left chest. Sizes S - 4XL in terms of Mens wear.",
             "Velcro Backed Patch (SAINTCON23 Logo) with embroidered edge, 1.5\"x6\"",
             "Black Beimar AZL802 with SAINTCON24 logo on left chest in red embroider.Sizes S - 4XL in terms of Mens wear.",
             "SAINTCON Forever Shot Glass",
             "Silicone Work Mat 30cm X 20cm",
-            "<p>Vikocell No Clean Solder Flux Pen for Electronics Tabbing Wire Soldering</p><p><strong>About this item</strong></p><ul><li>For rework and touch-up of smt, smd, and through hole solder joints</li><li>Suitable for automotive, computer, telecom</li><li>10Ml pen applicator with specially designed felt tip</li><li>Low solids content for practically no residue</li><li>Compatible with lead and lead-free solders</li></ul><p><br></p>",
-            "Get the solder off and replace them with newer ones, which it is very common when soldering, so this desoldering removal tool will be your perfect companion to suck the solder away effectively. Suck the Solder Away Easily The solder sucker measures 7.48”X0.79”, which will fit your hands perfectly no matter if you are left - handed or right - handed.With metal body and high pressure vacuum, this desoldering pump can help you suck the solder away effectively. How to Use the Desoldering Pump: Step 1: Press the plunger down until it is been locked and you will hear a click; Step 2: Make the tip of the soldering iron to the solder joint and allow the solder to become fully liquid; Step 3: Move the tip of the pump next to the molten solder.Move the iron out of the way and immediately cover the liquid solder puddle with the pump\'s tip. Pull the trigger; Step 4: Repeat this process if necessary.",
-
         ];
 
 
 
         // Arrays of images, descriptions, and prices
-        const productPrices = ["28.00", "10.00", "10.00", "2.00", "30.00", "74.00", "24.00", "70.00", "50.00", "16.00", "25.00", "70.00", "40.00", "16.00", "9.50", "65.00", "60.00", "60.00", "60.00", "60.00", "70.00", "60.00", "25.00", "14.00", "6.00", "7.00", "15.00", "50.00", "16.00", "90.00", "9.00", "8.00", "55.00", "9.00", "10.00", "14.00", "variable", "4.00", "4.00", "104.00", "204.00", "20.00", "20.00", "20.00", "30.00", "10.00", "10.00", "1.00", "16.00", "4.00", "6.00", "4.00", "4.00", "4.00", "4.00", "4.00", "4.00", "20.00", "20.00", "32.00", "4.00", "32.00", "4.00", "8.00", "4.00", "4.00"]; // Prices for each product
+        const productPrices = ["28.00", "10.00", "2.00", "30.00", "74.00", "24.00", "70.00", "50.00", "16.00", "25.00", "70.00", "40.00", "16.00", "9.50", "65.00", "60.00", "60.00", "60.00", "60.00", "70.00", "60.00", "25.00", "14.00", "6.00", "7.00", "15.00", "50.00", "16.00", "90.00", "9.00", "8.00", "55.00", "9.00", "10.00", "14.00", "variable", "104.00", "204.00", "20.00", "20.00", "20.00", "30.00", "10.00", "10.00", "1.00", "16.00", "6.00", "4.00", "4.00", "4.00", "4.00", "4.00", "4.00", "32.00", "4.00", "32.00", "4.00", "8.00"]; // Prices for each product
 
             let currentIndex = 0;
 
             // Arrays of product names, images, descriptions, and prices
         const productNames = ["10 x 10 Mini-Badge Display Board",
-            "2022 SAINTCON Beanie",
             "2022 SAINTCON Conference Badge",
             "2023 Family Night Kids Package",
             "2023 SAINTCON Conference Badge",
@@ -187,7 +234,6 @@
             "JL- Tool Roll",
             "Misc Minibadge",
             "Multi-Purpose Compact Tactical Waist Utility Pouch Drop Bag",
-            "Precision Locking Tweezers",
             "Previous Years Shirts",
             "SAINTCON AppSec Co Patch",
             "SAINTCON BadgeLife Patch",
@@ -195,15 +241,11 @@
             "SAINTCON Keep Patch",
             "SAINTCON LockPick Co Patch",
             "SAINTCON ScavHunt Ch Patch",
-            "SAINTCON TIN FOIL HAT",
-            "SAINTCON23 Ball Cap",
             "SAINTCON23 Hoodie",
             "SAINTCON23 Patch",
             "SAINTCON24 Hoodie",
             "Shot Glass",
             "Silicone Work Mat 30cm X 20cm",
-            "Solder Flux Pen",
-            "Solder Sucker"
         ];
 
             function rotateImage() {
